--- a/about_me.html
+++ b/about_me.html
@@ -75,10 +75,10 @@
 					</div>
 					<div class="col-xs-9 text-right menu-1">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="work.html">About me</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="about_me.html">About me</a></li>
 							<li class="has-dropdown">
-								<a href="blog.html">Exercices</a>
+								<a href="#">Assignments</a>
 								<ul class="dropdown">
 									<li><a href="#">W01│Principles and Practices</a></li>
                                                                         <li><a href="#">W02│Project Management</a></li>
@@ -102,8 +102,8 @@
                                                                         
 								</ul>
 							</li>
-							<li><a href="contact.html">Final Project</a></li>
-                                                        <li><a href="contact.html">Contact</a></li>
+							<li><a href="#">Final Project</a></li>
+                                                        <li><a href="#">Contact</a></li>
 					</div>
 				</div>
 				
@@ -117,10 +117,10 @@
 			   	<li style="background-image: url(images/img_bg_3.jpg);">
 			   		<div class="overlay-gradient"></div>
 		   			<div class="row">
-			   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
+			   			<div class="col-md-6 slider-text slider-text-bg">
 			   				<div class="slider-text-inner text-center">
-			   					<h1>Work</h1>
-									<h2>Free html5 templates Available at <a href="http://themewagon.com/" target="_blank">Themewagon</a></h2>
+                                                            <h1>Hi, my name is <strong>Andrea Lazo Zúñiga</strong></h1>
+                                                            <h2>Free html5 templates Available at <a href="http://themewagon.com/" target="_blank">Themewagon</a></h2>
 			   				</div>
 			   			</div>
 			   		</div>
